src/tests/code/pass/pass_singleline_comment.u
entrypoint:~()
{
	iErrorCode:~i64{36};

	//iErrorCode *= 4;

	// we can make comments // iErrorCode *= 4; more then one deep 
	
	// / /// //*// iErrorCode *= 4;
}
->(iErrorCode)