src/tests/code/fail/fail_int_literal_bin.u
entrypoint:~()->(i64{0b00101021})	// Character 2 is invalid in a binary integer.